deleted taller tree traits section , added citations
I figured maybe this would shorten the manuscript?

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -180,6 +180,75 @@
   number = {3}
 }
 
+@article{atkinRelationshipInhibitionLeaf1998,
+  title = {Relationship between the Inhibition of Leaf Respiration by Light and Enhancement of Leaf Dark Respiration Following Light Treatment},
+  author = {Atkin, Owen K. and Evans, John R. and Siebke, Katharina},
+  date = {1998},
+  journaltitle = {Functional Plant Biol.},
+  volume = {25},
+  pages = {437--443},
+  publisher = {{CSIRO PUBLISHING}},
+  issn = {1445-4416},
+  doi = {10.1071/pp97159},
+  url = {http://www.publish.csiro.au/fp/pp97159},
+  urldate = {2021-07-02},
+  abstract = {Respiration (R, non-photorespiratory mitochondrial CO2 release) in leaves is inhibited by light. However, exposure to darkness after a period of illumination can also result in R being temporarily stimulated (termed ‘light enhanced dark respiration’, LEDR). We used a fast-response CO2 exchange system to investigate these observations in tobacco leaves. After switching off the light, there were two peaks of CO2 release, the first at 15–20 s (the photorespiratory post-illumination burst) and the second at 180–250 s (LEDR). LEDR occurred in all post-illumination experiments, independent of O2 or CO2 concentration. However, LEDR increased with increasing irradiance during the pre-dark period, suggesting some dependency on prior photosynthesis. We investigated the inhibition of R by light at low CO2 concentrations (\&Ggr;*): \&Ggr;* is the intercellular CO2 concentration at which net CO2 release represents R in the light. The inhibition of R in the light took about 50 s and was even evident at 3 mmol photons m-2 s-1, regardless of the light quality (red, blue or white). The inhibition of R by light showed similar dependency on irradiance as LEDR, such that the degree of inhibition was positively correlated with the level of LEDR. In the light, switching from 350 ppm to a low CO2 concentration that resulted in the intercellular CO2 concentration being at \&Ggr;*, resulted in R initially increasing and then stabilising. Maintaining the leaf at \&Ggr;* did not, therefore, lead to an underestimation of R. Our data suggest that a common mechanism may be responsible for both the inhibition of R by light and LEDR.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\4J3APCFY\\Atkin et al. - 1998 - Relationship between the inhibition of leaf respir.pdf},
+  langid = {english},
+  number = {4}
+}
+
+@article{atkinRelationshipInhibitionLeaf1998a,
+  title = {Relationship between the Inhibition of Leaf Respiration by Light and Enhancement of Leaf Dark Respiration Following Light Treatment},
+  author = {Atkin, Owen K. and Evans, John R. and Siebke, Katharina},
+  date = {1998},
+  journaltitle = {Functional Plant Biol.},
+  volume = {25},
+  pages = {437},
+  issn = {1445-4408},
+  doi = {10.1071/PP97159},
+  url = {http://www.publish.csiro.au/?paper=PP97159},
+  urldate = {2021-07-02},
+  abstract = {Respiration (R, non-photorespiratory mitochondrial CO2 release) in leaves is inhibited by light. However, exposure to darkness after a period of illumination can also result in R being temporarily stimulated (termed ‘light enhanced dark respiration’, LEDR). We used a fast-response CO2 exchange system to investigate these observations in tobacco leaves. After switching off the light, there were two peaks of CO2 release, the first at 15–20 s (the photorespiratory post-illumination burst) and the second at 180–250 s (LEDR). LEDR occurred in all post-illumination experiments, independent of O2 or CO2 concentration. However, LEDR increased with increasing irradiance during the pre-dark period, suggesting some dependency on prior photosynthesis. We investigated the inhibition of R by light at low CO2 concentrations (Γ∗): Γ∗ is the intercellular CO2 concentration at which net CO2 release represents R in the light. The inhibition of R in the light took about 50 s and was even evident at 3 ␮mol photons m–2 s–1, regardless of the light quality (red, blue or white). The inhibition of R by light showed similar dependency on irradiance as LEDR, such that the degree of inhibition was positively correlated with the level of LEDR. In the light, switching from 350 ppm to a low CO2 concentration that resulted in the intercellular CO2 concentration being at Γ∗, resulted in R initially increasing and then stabilising. Maintaining the leaf at Γ∗ did not, therefore, lead to an underestimation of R. Our data suggest that a common mechanism may be responsible for both the inhibition of R by light and LEDR.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\K3IGN2W8\\Atkin et al. - 1998 - Relationship between the inhibition of leaf respir.pdf},
+  langid = {english},
+  number = {4}
+}
+
+@article{atkinRelationshipInhibitionLeaf1998b,
+  title = {Relationship between the Inhibition of Leaf Respiration by Light and Enhancement of Leaf Dark Respiration Following Light Treatment},
+  author = {Atkin, Owen K. and Evans, John R. and Siebke, Katharina},
+  date = {1998},
+  journaltitle = {Functional Plant Biol.},
+  volume = {25},
+  pages = {437},
+  issn = {1445-4408},
+  doi = {10.1071/PP97159},
+  url = {http://www.publish.csiro.au/?paper=PP97159},
+  urldate = {2021-07-02},
+  abstract = {Respiration (R, non-photorespiratory mitochondrial CO2 release) in leaves is inhibited by light. However, exposure to darkness after a period of illumination can also result in R being temporarily stimulated (termed ‘light enhanced dark respiration’, LEDR). We used a fast-response CO2 exchange system to investigate these observations in tobacco leaves. After switching off the light, there were two peaks of CO2 release, the first at 15–20 s (the photorespiratory post-illumination burst) and the second at 180–250 s (LEDR). LEDR occurred in all post-illumination experiments, independent of O2 or CO2 concentration. However, LEDR increased with increasing irradiance during the pre-dark period, suggesting some dependency on prior photosynthesis. We investigated the inhibition of R by light at low CO2 concentrations (Γ∗): Γ∗ is the intercellular CO2 concentration at which net CO2 release represents R in the light. The inhibition of R in the light took about 50 s and was even evident at 3 ␮mol photons m–2 s–1, regardless of the light quality (red, blue or white). The inhibition of R by light showed similar dependency on irradiance as LEDR, such that the degree of inhibition was positively correlated with the level of LEDR. In the light, switching from 350 ppm to a low CO2 concentration that resulted in the intercellular CO2 concentration being at Γ∗, resulted in R initially increasing and then stabilising. Maintaining the leaf at Γ∗ did not, therefore, lead to an underestimation of R. Our data suggest that a common mechanism may be responsible for both the inhibition of R by light and LEDR.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\AN5SC9F2\\Atkin et al. - 1998 - Relationship between the inhibition of leaf respir.pdf},
+  langid = {english},
+  number = {4}
+}
+
+@article{atkinRelationshipInhibitionLeaf1998c,
+  title = {Relationship between the Inhibition of Leaf Respiration by Light and Enhancement of Leaf Dark Respiration Following Light Treatment},
+  author = {Atkin, Owen K. and Evans, John R. and Siebke, Katharina},
+  date = {1998},
+  journaltitle = {Functional Plant Biol.},
+  volume = {25},
+  pages = {437},
+  issn = {1445-4408},
+  doi = {10.1071/PP97159},
+  url = {http://www.publish.csiro.au/?paper=PP97159},
+  urldate = {2021-07-02},
+  abstract = {Respiration (R, non-photorespiratory mitochondrial CO2 release) in leaves is inhibited by light. However, exposure to darkness after a period of illumination can also result in R being temporarily stimulated (termed ‘light enhanced dark respiration’, LEDR). We used a fast-response CO2 exchange system to investigate these observations in tobacco leaves. After switching off the light, there were two peaks of CO2 release, the first at 15–20 s (the photorespiratory post-illumination burst) and the second at 180–250 s (LEDR). LEDR occurred in all post-illumination experiments, independent of O2 or CO2 concentration. However, LEDR increased with increasing irradiance during the pre-dark period, suggesting some dependency on prior photosynthesis. We investigated the inhibition of R by light at low CO2 concentrations (Γ∗): Γ∗ is the intercellular CO2 concentration at which net CO2 release represents R in the light. The inhibition of R in the light took about 50 s and was even evident at 3 ␮mol photons m–2 s–1, regardless of the light quality (red, blue or white). The inhibition of R by light showed similar dependency on irradiance as LEDR, such that the degree of inhibition was positively correlated with the level of LEDR. In the light, switching from 350 ppm to a low CO2 concentration that resulted in the intercellular CO2 concentration being at Γ∗, resulted in R initially increasing and then stabilising. Maintaining the leaf at Γ∗ did not, therefore, lead to an underestimation of R. Our data suggest that a common mechanism may be responsible for both the inhibition of R by light and LEDR.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\WTSEPZZL\\Atkin et al. - 1998 - Relationship between the inhibition of leaf respir.pdf},
+  langid = {english},
+  number = {4}
+}
+
 @article{augspurgerDifferencesLeafPhenology2003,
   title = {Differences in Leaf Phenology between Juvenile and Adult Trees in a Temperate Deciduous Forest},
   author = {Augspurger, C. K. and Bartlett, E. A.},
@@ -2939,22 +3008,6 @@
   langid = {english}
 }
 
-@article{jensenPhysicalLimitsLeaf2013b,
-  title = {Physical {{Limits}} to {{Leaf Size}} in {{Tall Trees}}},
-  author = {Jensen, Kaare H. and Zwieniecki, Maciej A.},
-  date = {2013-01-04},
-  journaltitle = {Phys. Rev. Lett.},
-  volume = {110},
-  pages = {018104},
-  publisher = {{American Physical Society}},
-  doi = {10.1103/PhysRevLett.110.018104},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.110.018104},
-  urldate = {2021-06-16},
-  abstract = {Leaf sizes in angiosperm trees vary by more than 3 orders of magnitude, from a few mm to over 1 m. This large morphological freedom is, however, only expressed in small trees, and the observed leaf size range declines with tree height, forming well-defined upper and lower boundaries. The vascular system of tall trees that distributes the products of photosynthesis connects distal parts of the plant and forms one of the largest known continuous microfluidic distribution networks. In biological systems, intrinsic properties of vascular systems are known to constrain the morphological freedom of the organism. We show that the limits to leaf size can be understood by physical constraints imposed by intrinsic properties of the carbohydrate transport network. The lower boundary is set by a minimum energy flux, and the upper boundary is set by a diminishing gain in transport efficiency.},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\8M67MI7W\\Jensen and Zwieniecki - 2013 - Physical Limits to Leaf Size in Tall Trees.pdf;C\:\\Users\\Me\\Zotero\\storage\\REXNRQ63\\PhysRevLett.110.html},
-  number = {1}
-}
-
 @article{jiao-junWindProfilesTrees2004,
   title = {Wind Profiles in and over Trees},
   author = {Jiao-jun, Zhu and Xiu-fen, LI and Yutaka, Gonda and Takeshi, Matsuzaki},
@@ -4687,6 +4740,26 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\6V4QBEGH\\Mediavilla et al. - 2019 - Foliar plasticity related to gradients of heat and.pdf},
   number = {10},
   pmcid = {PMC6816560}
+}
+
+@article{meehlMoreIntenseMore2004,
+  title = {More {{Intense}}, {{More Frequent}}, and {{Longer Lasting Heat Waves}} in the 21st {{Century}}},
+  author = {Meehl, Gerald A. and Tebaldi, Claudia},
+  date = {2004-08-13},
+  journaltitle = {Science},
+  volume = {305},
+  pages = {994--997},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.1098704},
+  url = {http://science.sciencemag.org/content/305/5686/994},
+  urldate = {2021-07-03},
+  abstract = {{$<$}p{$>$}A global coupled climate model shows that there is a distinct geographic pattern to future changes in heat waves. Model results for areas of Europe and North America, associated with the severe heat waves in Chicago in 1995 and Paris in 2003, show that future heat waves in these areas will become more intense, more frequent, and longer lasting in the second half of the 21st century. Observations and the model show that present-day heat waves over Europe and North America coincide with a specific atmospheric circulation pattern that is intensified by ongoing increases in greenhouse gases, indicating that it will produce more severe heat waves in those regions in the future.{$<$}/p{$>$}},
+  eprint = {15310900},
+  eprinttype = {pmid},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\UG25H2LV\\Meehl and Tebaldi - 2004 - More Intense, More Frequent, and Longer Lasting He.pdf;C\:\\Users\\Me\\Zotero\\storage\\3I78TYSF\\994.html},
+  langid = {english},
+  number = {5686}
 }
 
 @article{meinzerBiophysicalConstraintsLeaf2008,
@@ -6985,6 +7058,25 @@
   number = {3}
 }
 
+@article{scafaroResponsesLeafRespiration2021,
+  title = {Responses of Leaf Respiration to Heatwaves},
+  author = {Scafaro, Andrew P. and Fan, Yuzhen and Posch, Bradley C. and Garcia, Andres and Coast, Onoriode and Atkin, Owen K.},
+  date = {2021},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {44},
+  pages = {2090--2101},
+  issn = {1365-3040},
+  doi = {10.1111/pce.14018},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/pce.14018},
+  urldate = {2021-07-02},
+  abstract = {Mitochondrial respiration (R) is central to plant physiology and responds dynamically to daily short-term temperature changes. In the longer-term, changes in energy demand and membrane fluidity can decrease leaf R at a common temperature and increase the temperature at which leaf R peaks (Tmax). However, leaf R functionality is more susceptible to short-term heatwaves. Catalysis increases with rising leaf temperature, driving faster metabolism and leaf R demand, despite declines in photosynthesis restricting assimilate supply and growth. Proteins denature as temperatures increase further, adding to maintenance costs. Excessive heat also inactivates respiratory enzymes, with a concomitant limitation on the capacity of the R system. These competing push-and-pull factors are responsible for the diminishing acceleration in leaf R rate as temperature rises. Under extreme heat, membranes become overly fluid, and enzymes such as the cytochrome c oxidase are impaired. Such changes can lead to over-reduction of the energy system culminating in reactive oxygen species production. This ultimately leads to the total breakdown of leaf R, setting the limit of leaf survival. Understanding the heat stress responses of leaf R is imperative, given the continued rise in frequency and intensity of heatwaves and the importance of R for plant fitness and survival.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.14018},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\WF6LIAKE\\Scafaro et al. - 2021 - Responses of leaf respiration to heatwaves.pdf;C\:\\Users\\Me\\Zotero\\storage\\QE34E6UZ\\pce.html},
+  keywords = {heat stress,high temperature,leaf respiration,mitochondria,thermal acclimation},
+  langid = {english},
+  number = {7}
+}
+
 @article{scartazzaInvestigatingEuropeanBeech2016,
   title = {Investigating the {{European}} Beech ({{Fagus}} Sylvatica {{L}}.) Leaf Characteristics along the Vertical Canopy Profile: Leaf Structure, Photosynthetic Capacity, Light Energy Dissipation and Photoprotection Mechanisms},
   shorttitle = {Investigating the {{European}} Beech ({{Fagus}} Sylvatica {{L}}.) Leaf Characteristics along the Vertical Canopy Profile},
@@ -7081,43 +7173,6 @@
   eprinttype = {jstor},
   file = {C\:\\Users\\Me\\Zotero\\storage\\EKV4LB9V\\Schuepp - 1993 - Tansley Review No. 59. Leaf Boundary Layers.pdf},
   number = {3}
-}
-
-@article{schymanskiStomatalControlLeaf2013,
-  title = {Stomatal {{Control}} and {{Leaf Thermal}} and {{Hydraulic Capacitances}} under {{Rapid Environmental Fluctuations}}},
-  author = {Schymanski, Stanislaus J. and Or, Dani and Zwieniecki, Maciej},
-  date = {2013-01-24},
-  journaltitle = {PLOS ONE},
-  volume = {8},
-  pages = {e54231},
-  publisher = {{Public Library of Science}},
-  issn = {1932-6203},
-  doi = {10.1371/journal.pone.0054231},
-  url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0054231},
-  urldate = {2020-12-22},
-  abstract = {Leaves within a canopy may experience rapid and extreme fluctuations in ambient conditions. A shaded leaf, for example, may become exposed to an order of magnitude increase in solar radiation within a few seconds, due to sunflecks or canopy motions. Considering typical time scales for stomatal adjustments, (2 to 60 minutes), the gap between these two time scales raised the question whether leaves rely on their hydraulic and thermal capacitances for passive protection from hydraulic failure or over-heating until stomata have adjusted. We employed a physically based model to systematically study effects of short-term fluctuations in irradiance on leaf temperatures and transpiration rates. Considering typical amplitudes and time scales of such fluctuations, the importance of leaf heat and water capacities for avoiding damaging leaf temperatures and hydraulic failure were investigated. The results suggest that common leaf heat capacities are not sufficient to protect a non-transpiring leaf from over-heating during sunflecks of several minutes duration whereas transpirative cooling provides effective protection. A comparison of the simulated time scales for heat damage in the absence of evaporative cooling with observed stomatal response times suggested that stomata must be already open before arrival of a sunfleck to avoid over-heating to critical leaf temperatures. This is consistent with measured stomatal conductances in shaded leaves and has implications for water use efficiency of deep canopy leaves and vulnerability to heat damage during drought. Our results also suggest that typical leaf water contents could sustain several minutes of evaporative cooling during a sunfleck without increasing the xylem water supply and thus risking embolism. We thus submit that shaded leaves rely on hydraulic capacitance and evaporative cooling to avoid over-heating and hydraulic failure during exposure to typical sunflecks, whereas thermal capacitance provides limited protection for very short sunflecks (tens of seconds).},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\4XX392ZF\\Schymanski et al. - 2013 - Stomatal Control and Leaf Thermal and Hydraulic Ca.pdf},
-  keywords = {Latent heat,Leaves,Stomata,Vapor pressure,Vapors,Water resources,Wind,Xylem},
-  langid = {english},
-  number = {1}
-}
-
-@article{schymanskiStomatalControlLeaf2013a,
-  title = {Stomatal {{Control}} and {{Leaf Thermal}} and {{Hydraulic Capacitances}} under {{Rapid Environmental Fluctuations}}},
-  author = {Schymanski, Stanislaus J. and Or, Dani and Zwieniecki, Maciej},
-  editor = {Bauerle, William},
-  date = {2013-01-24},
-  journaltitle = {PLoS ONE},
-  volume = {8},
-  pages = {e54231},
-  issn = {1932-6203},
-  doi = {10.1371/journal.pone.0054231},
-  url = {https://dx.plos.org/10.1371/journal.pone.0054231},
-  urldate = {2021-01-04},
-  abstract = {Leaves within a canopy may experience rapid and extreme fluctuations in ambient conditions. A shaded leaf, for example, may become exposed to an order of magnitude increase in solar radiation within a few seconds, due to sunflecks or canopy motions. Considering typical time scales for stomatal adjustments, (2 to 60 minutes), the gap between these two time scales raised the question whether leaves rely on their hydraulic and thermal capacitances for passive protection from hydraulic failure or over-heating until stomata have adjusted. We employed a physically based model to systematically study effects of short-term fluctuations in irradiance on leaf temperatures and transpiration rates. Considering typical amplitudes and time scales of such fluctuations, the importance of leaf heat and water capacities for avoiding damaging leaf temperatures and hydraulic failure were investigated. The results suggest that common leaf heat capacities are not sufficient to protect a non-transpiring leaf from over-heating during sunflecks of several minutes duration whereas transpirative cooling provides effective protection. A comparison of the simulated time scales for heat damage in the absence of evaporative cooling with observed stomatal response times suggested that stomata must be already open before arrival of a sunfleck to avoid overheating to critical leaf temperatures. This is consistent with measured stomatal conductances in shaded leaves and has implications for water use efficiency of deep canopy leaves and vulnerability to heat damage during drought. Our results also suggest that typical leaf water contents could sustain several minutes of evaporative cooling during a sunfleck without increasing the xylem water supply and thus risking embolism. We thus submit that shaded leaves rely on hydraulic capacitance and evaporative cooling to avoid over-heating and hydraulic failure during exposure to typical sunflecks, whereas thermal capacitance provides limited protection for very short sunflecks (tens of seconds).},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\A4EBRG5F\\pone.0054231.pdf},
-  langid = {english},
-  number = {1}
 }
 
 @article{schymanskiStomatalControlLeaf2013b,
@@ -8115,6 +8170,27 @@
   eprinttype = {jstor},
   file = {C\:\\Users\\Me\\Zotero\\storage\\3KV9YMPR\\Tibbitts - 1979 - Humidity and Plants.pdf},
   number = {6}
+}
+
+@article{trenberthGlobalWarmingChanges2014b,
+  title = {Global Warming and Changes in Drought},
+  author = {Trenberth, Kevin E. and Dai, Aiguo and van der Schrier, Gerard and Jones, Philip D. and Barichivich, Jonathan and Briffa, Keith R. and Sheffield, Justin},
+  date = {2014-01},
+  journaltitle = {Nature Clim Change},
+  volume = {4},
+  pages = {17--22},
+  publisher = {{Nature Publishing Group}},
+  issn = {1758-6798},
+  doi = {10.1038/nclimate2067},
+  url = {http://www.nature.com/articles/nclimate2067},
+  urldate = {2021-07-03},
+  abstract = {Recent studies have produced conflicting results about the impacts of climate change on drought. In this Perspective, a commonly used drought index and observational data are examined to identify the cause of these discrepancies. The authors indicate that improvements in the quality and coverage of precipitation data and quantification of natural variability are necessary to provide a better understanding of how drought is changing.},
+  annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Reviews Subject\_term: Atmospheric dynamics;Attribution;Hydrology Subject\_term\_id: atmospheric-dynamics;attribution;hydrology},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\B59K9JMP\\Trenberth et al. - 2014 - Global warming and changes in drought.pdf;C\:\\Users\\Me\\Zotero\\storage\\LAUQ6TIL\\nclimate2067.html},
+  issue = {1},
+  langid = {english},
+  number = {1},
+  options = {useprefix=true}
 }
 
 @article{TrichomeDensityIts1997,
