--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -109,7 +109,7 @@ In the meantime, our findings imply that while large canopy trees are the most v
 # Introduction
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
-Globally, temperatures have risen # $1.2^\circ$C since the 1850-1900 period [Rohde & Hausfater, 2020] and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC 2021), accompanied by increasing severity and frequency of heat waves [@rohdeBerkeleyEarthLand2020] and hotter droughts [*Trenberth et al. 2014*].
+Globally, temperatures have risen # $1.2^\circ$C since the 1850-1900 period [@rohdeBerkeleyEarthLand2020] and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC 2021), accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004] and hotter droughts [@trenberthGlobalWarmingChanges2014].
 These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Collectively, these impacts may lead to reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system, decreased C storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
@@ -198,17 +198,17 @@ and decreases with with vapor pressure deficit, or increases with RH (Fig. `r fi
 
 **attempted to oraganize**
 
-~Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $ga$ ie. boundary layer conductance) and latent heat loss (via $gs$ ie. Stomatal conductance and $E$ ie evaporation).
+~Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $ga$ ie. boundary layer conductance) and latent heat loss (via $gs$ ie. Stomatal conductance and $E$ ie evaporation)[@bonan_ecological_2016].
 
-$Ga$ and $Gs$ are dominant factors in $T_{leaf}$ flux. $Ga$ increases with wind speed which also in turn increases $gs$, thereby reduces $T_{leaf}$-$T_{air}$ (Fig. `r fig_leaf_T`b). Therefore, high windspeeds in upper canopies such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[Bonan 2008]. However, low wind speeds typically decouple leaves from $T_{air}$, more so when solar radiation is high and $gs$ is low. Additionally, $T_{leaf}-T_{air}$ increases with humidity (Fig. `r fig_leaf_T`c) because reduced $ga$ stifles heat dissapation through $E$ and $gs$.
+$Ga$ and $Gs$ are dominant factors in $T_{leaf}$ flux. $Ga$ increases with wind speed which also in turn increases $gs$, thereby reduces $T_{leaf}$-$T_{air}$ (Fig. `r fig_leaf_T`b). Therefore, high windspeeds in upper canopies such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016]. However, low wind speeds typically decouple leaves from $T_{air}$, more so when solar radiation is high and $gs$ is low. Additionally, $T_{leaf}-T_{air}$ increases with humidity (Fig. `r fig_leaf_T`c) because reduced $ga$ stifles heat dissapation through $E$ and $gs$.
 
-Latent heat loss through maximum $gs$, cools the leaf and decreases $T_{leaf}$-$T_{air}$, allowing coupling between leaf and air. However in conditions of low soil moisture during drought (Fig. `r fig_leaf_T`), greater temperature than $gs$ thermal optimum, and air dryness causing an increase in VPD, $gs$ becomes limited, thereby increasing $T_{leaf}$-$T_{air}$. Limitation to $gs$ can also exaggerate effects of biophysical factors that contribute to energy inputs such as, solar radiation, humidity and $T_{air}$ (Fig. `r fig_leaf_T`).
+Latent heat loss through maximum $gs$, cools the leaf and decreases $T_{leaf}$-$T_{air}$, allowing coupling between leaf and air. However in conditions of low soil moisture during drought (Fig. `r fig_leaf_T`), greater temperature than $gs$ thermal optimum, and air dryness causing an increase in VPD, $gs$ becomes limited, thereby increasing $T_{leaf}$-$T_{air}$ [@bonan_ecological_2016]. Limitation to $gs$ can also exaggerate effects of biophysical factors that contribute to energy inputs such as, solar radiation, humidity and $T_{air}$ (Fig. `r fig_leaf_T`)[@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @dongBiophysicalHomoeostasisLeaf2017].
 
-Leaf size and physiology influence $ga$, $gs$, leaf thermal capacitance (capacity to hold heat), and therefore also $T_{leaf}$-$T_{air}$. Smaller leaves have thinner boundary layer that enables coupling with $T_{air}$ through higher $ga$ compared to large leaves that can be more decoupled from $T_{air}$ (Fig. `r fig_leaf_T`a). However, greater $gs$ in large leaves under low raditation, can be cooler than small leaves. Sun leaves, such as in upper canopies, tend to have greater $gs$, due to greater stomatal density [Table 1] and lower thermal capacitance due to lower water potential than shade leaves. But exposure to high irradiance in upper canopies which is a dominant source of energy input increases $T_{leaf}$-$T_{leaf}$ more than shade leaves that are shielded from biophysical conditions. However, because shade leaves have higher thermal capacitance and comparitevly lower $gs$, when exposed to an increase in heat flux, $T_{leaf}$-$T_{air}$ can become more elevated than sun leaves (Fig. `r fig_leaf_T`a).
+Leaf size and physiology [see next section] influence $ga$, $gs$, leaf thermal capacitance (capacity to hold heat), and therefore also $T_{leaf}$-$T_{air}$. Smaller leaves have thinner boundary layer that enables coupling with $T_{air}$ through higher $ga$ compared to large leaves that can be more decoupled from $T_{air}$ (Fig. `r fig_leaf_T`a). Smaller leaves can also heat and cool faster and with adequate water, will be most effective at cooling during high temperatures than larger leaves [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007;@fauset_differences_2018]. However, under low raditation, large leaves can be cooler than small leaves due to greater $gs$ [@leighThickLeavesAvoid2012;@bonan_ecological_2016]. Sun leaves, such as in the upper canopies, tend to have greater $gs$, due to greater stomatal density [Table 1] and lower thermal capacitance due to lower water potential than shade leaves. But exposure to high irradiance in upper canopies which is a dominant source of energy input increases $T_{leaf}$-$T_{leaf}$ more than shade leaves that are shielded from biophysical conditions [@millerOnlySunlitLeaves2021]. However, because shade leaves have higher thermal capacitance and comparitevly lower $gs$, when exposed to an increase in $T_{air}$, $T_{leaf}$-$T_{air}$ can become more elevated than sun leaves (Fig. `r fig_leaf_T`a)[@schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002].
 
 **Within forests, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
-$T_{leaf}$ generally tracks $T_{air}$, and in turn the vertical gradient of $T_{air}$ depends on canopy structure and $LAI$. Closed canopies, and high $LAI$ act as a sheild, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can be much warmer than below canopies layers [@millerOnlySunlitLeaves2021]. On the other hand, open canopies, or lower canopy $LAI$ allow more vertical air mixing and sunlight into below canopies, that can either neutralize $T_{leaf}$ gradient or in the case of 'canopy greenhouse effect' or even sunflecks, can elevate below canopy $T_{leaf}$-$T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013]. 
-It is also important to also note though NEON sites (in Fig. `r fig_NEON_vertical`) might not exactly reflect the $T_{leaf}$ pattern we might expect, partly because $T_{bio}$ measured using infrared sensor, reflects a wide swath of biological temperatures, but recent advances in $T_{leaf}$ modelling [see Scaling across Space and Time] will enhance our understanding of large scale $T_leaf$ vertical patterns.~~   
+$T_{leaf}$ generally tracks $T_{air}$, and in turn the vertical gradient of $T_{air}$ depends on canopy structure and $LAI$. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can be much warmer than below canopies layers [@millerOnlySunlitLeaves2021]. On the other hand, open canopies, or lower canopy $LAI$ allow more vertical air mixing and sunlight into below canopies, that can either neutralize $T_{leaf}$ gradient or in the case of 'canopy greenhouse effect' or even sunflecks, can elevate below canopy $T_{leaf}$-$T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013]. 
+It is also important to note that, NEON sites (in Fig. `r fig_NEON_vertical`) might not exactly reflect the $T_{leaf}$ pattern we might expect, partly because $T_{bio}$ measured using infrared sensor, reflects a wide swath of biological temperatures. But, recent advances in $T_{leaf}$ modelling that we outline [see Scaling across Space and Time], will enhance our understanding of large scale $T_leaf$ vertical patterns [@stillImagingCanopyTemperature].~~   
 
 **Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
@@ -231,16 +231,15 @@ Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limit
 ### In situ observations
 **Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in-situ $T_{leaf}$ observations (Figs. `r fig_NEON_vertical`-`r fig_leaf_T`).** 
 Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$* / ~due to high evapotranspiration~, and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
-In closed-canopy forests, *including tropical and temperate broadleaf forests*, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high radiation [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
-In contrast, in open forests with lower buffering capacity, lower-canopy $T_{leaf}$ may be greater than upper canopy $T_{leaf}$, due to greater light permeability, *vertical air mixing*, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
+In closed-canopy forests, *including tropical and temperate broadleaf forests*, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high irradiance [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
+In contrast, in open forests with lower buffering capacity, lower-canopy $T_{leaf}$ can be greater than upper canopy $T_{leaf}$, due to greater light permeability, *vertical air mixing*, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
 Similarly, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
 Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more than upper-canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 
 
-
 The extent of this buffering varies across forest types.
-*Upper canopies of temperate-deciduous species can have greater $T_{leaf} - T_{air}$ than tropical moist and wet forest [@mauTemperateTropicalForest2018a] and sparse canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018], however in considering a broader range of forests, results may differ (Fig. `r fig_NEON_vertical`).* 
-Because needle-leaves have lower $g_a$ than broad leaves, conifer canopies have lower mean $T_{leaf}$ [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. 
+*Available published data suggest that upper canopies of temperate-deciduous species can have greater $T_{leaf} - T_{air}$ than tropical moist and wet forest [@mauTemperateTropicalForest2018a] and sparse canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018], however in considering a broader range of forests, results may differ (Fig. `r fig_NEON_vertical`).* 
+Because needle-leaves have lower $g_a$ than broad leaves, needle-leaf conifer canopies have lower mean $T_{leaf}$ [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. 
 
 Spatial distribution of canopy temperature also shows that exposed tropical tree barks can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
 
@@ -249,13 +248,6 @@ Spatial distribution of canopy temperature also shows that exposed tropical tree
 **Leaf traits determine the capacity of leaves to thermoregulate [@michaletzEnergeticCarbonEconomic2016], and as such are critical to optamize leaf metabolism (see following section) across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
 Leaf morphology adjusts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of direct to diffused light and associated water demands determines the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. 
 This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`). 
-
-~~~ *(this paragraph breaks the flow, and I'd love to be able to drop it or perhaps dramatically shorten. It is important and interesting content, though)*
-Both biophysical variables (light, temperature, and evaporative demand; Fig. `r fig_NEON_vertical`) and biological variables (tree height) play a role in shaping leaf traits. 
-In particular, hydraulic constraints increase with height on a tree [@mcdowell_relationship_2011; @cobleLightAcclimationOptimizes2015; @couvreur_water_2018a] such that gas exchange is strongly constrained at the tops of very tall trees (e.g., ~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
-Isolating height (>35m) from light shows that, canopy $gs$ decreases with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [@jensenPhysicalLimitsLeaf2013b] and lobation [@kusiPlasticLeafMorphology2020] have been shown to decrease, and leaf mass per area (at greater than 20m) to increase, with height  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017; @marshallFoliageHeightInfluences2003]. 
-Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for further research, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
-~~~
 
 Across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table 1).
